--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "node ./server/index.js"
+    "server": "node ./server/index.js",
+    "server:test": "mocha ./server/test"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,5 +39,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "mocha": "^6.2.2"
   }
 }
