--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@material-ui/core": "^4.6.0",
     "big.js": "^5.2.2",
     "cors": "^2.8.5",
+    "husky": "^3.0.9",
+    "lint-staged": "^9.4.2",
     "luxon": "^1.21.1",
     "morgan": "^1.9.1",
+    "prettier": "^1.19.1",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -15,7 +18,8 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "source-map-explorer": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,7 +27,8 @@
     "test": "react-scripts test",
     "server": "node ./server/index.js",
     "server:test": "mocha ./server/test",
-    "lint": "node ./node_modules/eslint/bin/eslint.js src/**/*.js --fix"
+    "lint": "node ./node_modules/eslint/bin/eslint.js src/**/*.js --fix",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -55,5 +60,16 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "mocha": "^6.2.2"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
