--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "source-map-explorer": "^2.1.0"
+    "source-map-explorer": "^2.1.0",
+    "swagger-ui-express": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -59,7 +60,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "mocha": "^6.2.2"
+    "mocha": "^6.2.2",
+    "redux-mock-store": "^1.5.3"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
