--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,15 @@
 {
   "version": "0.2.0",
   "configurations": [
+  {
+    "type": "node",
+    "request": "launch",
+    "name": "Launch Server",
+    "program": "${workspaceFolder}/server/index.js",
+    "skipFiles": [
+      "<node_internals>/**"
+    ]
+  },
     {
       "name": "Chrome",
       "type": "chrome",
